--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="foodgram.js"></script>
+		<script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5590acb441de2291" async="async"></script>
 	</head>
 	    <body>
 	    	<div id="header" class="navbar navbar-fixed-top container-fluid">
@@ -16,7 +17,9 @@
 					<h2></h2>
 					<h4 id="text1" class="text-left">A #foodporn guide to San Francisco's best restaurants</h4>
 					<h6 class="text-left">powered by Instagram</h6>
+					<div class="addthis_sharing_toolbox"></div>
 				</div>
+			</div>
 			</div>
 			<div id="main" class="container-fluid">
 			 	<div class="row">
